@@ -14,6 +14,7 @@
 9.   Modified the StarBeam analysis tool so that is records the
      missing pulse immediately preceding the first missed pulse.
 10.  Set window modality on progress dialogs.
+11.  Notify the user if the SQLite (QSQLITE) driver is missing.
 
 0.19 (02/22/2015)
 
